--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "web-components"
   ],
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "prop-types": "^15.6.2",
     "transformation-matrix": "^1.12.0"
   },
